HelpWindow is now implemented, however there are still problems regarding the responsiveness of it.

--- a/src/GUI/help.html
+++ b/src/GUI/help.html
@@ -6,7 +6,7 @@
     body {
       font-family: Arial, sans-serif;
       font-size: 16px;
-      background-color: #333333;
+      background-color:#3C3F41;
       color: #ffffff;
       padding: 20px;
       text-align: center;
@@ -46,7 +46,6 @@
     }
 
     .help-window {
-      background-color: #444444;
       padding: 20px;
       border-radius: 5px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
@@ -54,13 +53,9 @@
 
     .help-window h1,
     .help-window h2,
-    .help-window p {
-      color: #ffffff;
+    .help-window p {;
     }
 
-    .help-window table td {
-      color: #ffffff;
-    }
   </style>
 </head>
 <body>
