--- a/src/GUI/help.html
+++ b/src/GUI/help.html
@@ -65,14 +65,22 @@
     <p>Welcome to the Graph Plotter Help.</p>
     <p>This application allows you to plot polynomial and parametric functions.</p>
 
-    <h2>Polynomial Function Tab</h2>
-    <p>In the Polynomial Function tab, you can insert your desired polynomial function and calculate the plot by pressing the Calculate button.</p>
-    <p>You can create up to three functions simultaneously. To add an additional input area for a function, click the Add button at the bottom of the window.</p>
+    <h2>Polynomial Functions</h2>
+    <p>In the Polynomial Function tab, you can insert your desired polynomial function and calculate the plot by pressing the Calculate button.
+       To Enter a Polynomial Function, the following syntax has to be used: Exponentials: x^2...x^3; Coefficients: 2x....2/5x...-3x
+    </p>
+    <p>You can create up to three functions simultaneously. To add a function, click the Add button at the bottom of the window.</p>
     <p>For better visibility, you can choose a color for each function. To delete a function, you can either remove its input area by pressing the Delete button or simply recalculate the plot by adding a new function and pressing Calculate.</p>
+    <p>To get more Information about a Graph an Information window on the bottom will appear that holds The Roots, the Extreme Points and the current Graph-color.</p>
+    <p>It is also possible to derive a function by clicking its corresponding derive button.</p>
 
-    <h2>Parametric Function Tab</h2>
+    <h2>Parametric Functions</h2>
     <p>In the Parametric Function tab, you can add one parametric function along with its x and y components. You need to set the range in which the function will be displayed.</p>
     <p>You can reset your inputs by clicking the Reset button, which will clear all the input fields. Alternatively, you can modify the inputs and recalculate the plot.</p>
+
+    <h2>Options</h2>
+    <p>On the upper right is a button with a gear icon. This opens an option menu where things like the grid or specific calculations can be turned off.</p>
+
     <!--
     <p>There are also some keywords that produce predefined functions:</p>
     <table>
