Change formulation of helpWindow content

--- a/src/GUI/help.html
+++ b/src/GUI/help.html
@@ -58,47 +58,32 @@
 
   </style>
 </head>
+
 <body>
 <div class="container">
-  <div class="help-window">
-    <h1>Polynomial / Parametric Graph Plotter</h1>
-    <p>Welcome to the Graph Plotter Help.</p>
-    <p>This application allows you to plot polynomial and parametric functions.</p>
+  <section class="help-window">
+    <h1>Guidance for Polynomial and Parametric Graph Plotter</h1>
+    <p>Welcome to the instruction manual for our Graph Plotter tool.</p>
+    <p>This innovative tool enables users to generate and visualize polynomial and parametric function graphs.</p>
 
-    <h2>Polynomial Functions</h2>
-    <p>In the Polynomial Function tab, you can insert your desired polynomial function and calculate the plot by pressing the Calculate button.
-       To Enter a Polynomial Function, the following syntax has to be used: Exponentials: x^2...x^3; Coefficients: 2x....2/5x...-3x
-    </p>
-    <p>You can create up to three functions simultaneously. To add a function, click the Add button at the bottom of the window.</p>
-    <p>For better visibility, you can choose a color for each function. To delete a function, you can either remove its input area by pressing the Delete button or simply recalculate the plot by adding a new function and pressing Calculate.</p>
-    <p>To get more Information about a Graph an Information window on the bottom will appear that holds The Roots, the Extreme Points and the current Graph-color.</p>
-    <p>It is also possible to derive a function by clicking its corresponding derive button.</p>
+    <h2>Utilizing Polynomial Functions</h2>
+    <p>In the Polynomial Function section, input your chosen polynomial function, then calculate its graph using the 'Calculate' button. Note the following syntax conventions: for exponentials use "x^2...x^3" and for coefficients use "2x...2/5x...-3x".</p>
+    <p>You can graphically represent up to three functions concurrently. To add another function, simply click the 'Add' button located beneath the interface.</p>
+    <p>For enhanced visual clarity, each function can be assigned a unique color. To remove a function, either press the 'Delete' button to erase its input field, or add a new function and click 'Calculate' to refresh the plot.</p>
+    <p>An informative panel will appear beneath the graph, providing details such as Roots, Extreme Points, and the currently applied Graph color.</p>
+    <p>The application also enables the derivation of a function via its corresponding 'Derive' button.</p>
 
-    <h2>Parametric Functions</h2>
-    <p>In the Parametric Function tab, you can add one parametric function along with its x and y components. You need to set the range in which the function will be displayed.</p>
-    <p>You can reset your inputs by clicking the Reset button, which will clear all the input fields. Alternatively, you can modify the inputs and recalculate the plot.</p>
+    <h2>Utilizing Parametric Functions</h2>
+    <p>In the Parametric Function section, you can add one parametric function with its respective x and y components. Make sure to set the range in which the function will be rendered.</p>
+    <p>The 'Reset' button can be utilized to clear all inputs. Alternatively, you can edit the inputs and click 'Calculate' to recompute the plot.</p>
 
-    <h2>Options</h2>
-    <p>On the upper right is a button with a gear icon. This opens an option menu where things like the grid or specific calculations can be turned off.</p>
+    <h2>Configuration Options</h2>
+    <p>In the top-right corner of the interface, you'll find a button adorned with a gear icon. Clicking this button opens the options menu, where you can adjust preferences such as grid display or specific calculations.</p>
 
-    <!--
-    <p>There are also some keywords that produce predefined functions:</p>
-    <table>
-      <tr>
-        <td>Heart</td>
-      </tr>
-      <tr>
-        <td>Uhl</td>
-      </tr>
-      <tr>
-        <td>Grade</td>
-      </tr>
-    </table>
-    -->
-
-    <h2>Screenshot and Help Button</h2>
-    <p>In both tabs, you will find a Screenshot button that allows you to capture the current plot. The Help button at the bottom of the window displays this Help window.</p>
-  </div>
+    <h2>Screenshot and Assistance Features</h2>
+    <p>Both function tabs include a 'Screenshot' button to capture the current plot, and a 'Help' button located at the bottom of the window that opens this Assistance window.</p>
+  </section>
 </div>
 </body>
+
 </html>
