--- a/src/GUI/help.html
+++ b/src/GUI/help.html
@@ -6,8 +6,8 @@
     body {
       font-family: Arial, sans-serif;
       font-size: 16px;
-      background-color:#3C3F41;
-      color: #ffffff;
+      background-color: #282a36;
+      color: #f8f8f2;
       padding: 20px;
       text-align: center;
     }
@@ -20,58 +20,67 @@
     h2 {
       font-size: 25px;
       margin-bottom: 15px;
+      color: #50fa7b;
     }
 
-    p {
-      margin-bottom: 10px;
-    }
-
-    table {
-      margin-left: auto;
-      margin-right: auto;
-      text-align: center;
+    p, li {
       margin-bottom: 15px;
+      line-height: 1.6;
+      text-align: justify;
     }
 
-    table ul {
-      padding-left: 0;
-      list-style: none;
-      text-align: center;
-      margin-top: 0;
+    ul {
+      padding-left: 20px;
+      margin-bottom: 20px;
+      text-align: left;
     }
 
     .container {
       max-width: 800px;
       margin: 0 auto;
+      background: #282a36;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     }
 
     .help-window {
       padding: 20px;
       border-radius: 5px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     }
-
-    .help-window h1,
-    .help-window h2,
-    .help-window p {;
-    }
-
   </style>
 </head>
 
 <body>
-<div class="container">
-  <section class="help-window">
+<div class="container help-window">
     <h1>Guidance for Polynomial and Parametric Graph Plotter</h1>
     <p>Welcome to the instruction manual for our Graph Plotter tool.</p>
     <p>This innovative tool enables users to generate and visualize polynomial and parametric function graphs.</p>
 
     <h2>Utilizing Polynomial Functions</h2>
-    <p>In the Polynomial Function section, input your chosen polynomial function, then calculate its graph using the 'Calculate' button. Note the following syntax conventions: for exponentials use "x^2...x^3" and for coefficients use "2x...2/5x...-3x".</p>
+    <p>In the Polynomial Function section, input your chosen polynomial function, then calculate its graph using the 'Calculate' button. Note the following syntax conventions:</p>
+
+    <ul>
+      <li>The variable must be 'x'.</li>
+      <li>For exponentials use the '^' symbol, for example, "x^2...x^3".</li>
+      <li>For coefficients, you can use any real number, a fraction, or a mathematical expression (without variable 'x'), for example, "2x...2/5x...-3x...sin(4)x...(-1/2+1/3)x^2".</li>
+      <li>Use '+' or '-' to add or subtract terms. Parentheses can be used to group coefficients, but not to group terms.</li>
+      <li>A standalone constant term can be entered without 'x', for example, "+3...-2".</li>
+      <li>The terms do not need to be in any particular order.</li>
+      <li>An empty term or a term with just 'x' will be treated as having a coefficient of 1, for example, "x...x^2...+x...-x".</li>
+    </ul>
+
     <p>You can graphically represent up to three functions concurrently. To add another function, simply click the 'Add' button located beneath the interface.</p>
+
     <p>For enhanced visual clarity, each function can be assigned a unique color. To remove a function, either press the 'Delete' button to erase its input field, or add a new function and click 'Calculate' to refresh the plot.</p>
+
     <p>An informative panel will appear beneath the graph, providing details such as Roots, Extreme Points, and the currently applied Graph color.</p>
+
     <p>The application also enables the derivation of a function via its corresponding 'Derive' button.</p>
+
+    <p>If the polynomial you entered is not valid, an error message will be displayed to help you correct it. Please check the syntax and try again.</p>
+
 
     <h2>Utilizing Parametric Functions</h2>
     <p>In the Parametric Function section, you can add one parametric function with its respective x and y components. Make sure to set the range in which the function will be rendered.</p>
@@ -82,7 +91,6 @@
 
     <h2>Screenshot and Assistance Features</h2>
     <p>Both function tabs include a 'Screenshot' button to capture the current plot, and a 'Help' button located at the bottom of the window that opens this Assistance window.</p>
-  </section>
 </div>
 </body>
 
